--- a/Medical-History-master/app/src/main/res/drawable-v24/brown_border.xml
+++ b/Medical-History-master/app/src/main/res/drawable-v24/brown_border.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="@color/colorBorder" />
+        android:color="#9B5B71" />
     <solid
         android:color="#00FFFFFF"/>
 </shape>
