--- a/Medical-History-master/app/src/main/res/layout/activity_sign_in.xml
+++ b/Medical-History-master/app/src/main/res/layout/activity_sign_in.xml
@@ -31,8 +31,8 @@
 
                 <ImageView
                     android:id="@+id/imageView"
-                    android:layout_width="106dp"
-                    android:layout_height="104dp"
+                    android:layout_width="256dp"
+                    android:layout_height="256dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -40,17 +40,26 @@
                     app:srcCompat="@drawable/logo3" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <Space
+
+            <TextView
+                android:id="@+id/init"
                 android:layout_width="match_parent"
-                android:layout_height="40dp" />
+                android:layout_height="42dp"
+                android:gravity="center"
+                android:text="MI HISTORIAL CLINICO  "
+                android:textColor="#F8F8F8"
+                android:textColorLink="#4CAF50"
+                android:textSize="26sp"
+                app:fontFamily="sans-serif-smallcaps" />
 
             <TextView
                 android:id="@+id/configProfile"
                 android:layout_width="match_parent"
                 android:layout_height="42dp"
                 android:gravity="center"
-                android:text="sign-in"
-                android:textColor="#000000"
+                android:text="INICIAR SESION"
+                android:textColor="#F8F8F8"
+                android:textColorLink="#4CAF50"
                 android:textSize="26sp"
                 app:fontFamily="sans-serif-smallcaps" />
 
@@ -59,24 +68,25 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.7"
+            android:layout_weight="0.3"
             android:background="#80E83971"
             android:orientation="vertical">
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="25dp" />
+                android:layout_height="60dp" />
 
             <EditText
                 android:id="@+id/usernameField2"
                 android:layout_width="264dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
+                android:background="#F43677"
                 android:backgroundTint="#F5D57797"
                 android:drawableTint="#BAE91E63"
                 android:ems="10"
                 android:foregroundTint="@color/colorBorder"
-                android:hint="(Please enter a email)"
+                android:hint="   Ingrese su correo"
                 android:singleLine="true"
                 android:textColor="#FFFFFF"
                 android:textColorHighlight="#FDFAFA"
@@ -94,15 +104,17 @@
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="38dp" />
+                android:layout_height="24dp" />
 
             <EditText
                 android:id="@+id/passwordField2"
                 android:layout_width="264dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
+                android:background="#F43677"
+                android:backgroundTint="#F5D57797"
                 android:ems="10"
-                android:hint="(Please enter a password)"
+                android:hint="   Ingrese su contraseña"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
                 android:singleLine="true"
@@ -133,9 +145,10 @@
             android:layout_width="216dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="#4CAF59"
-            android:text="Sign in"
-            android:textColor="@color/common_google_signin_btn_text_dark_default" />
+            android:background="#4CAF50"
+            android:text="INICIAR SESION"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
+            android:textColorLink="#4CAF50" />
 
 
         <Space
@@ -148,11 +161,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="#33DC3A"
+            android:clickable="true"
             android:gravity="center"
             android:minHeight="48dp"
             android:padding="16dp"
-            android:text="Sign up"
-            android:clickable="true" />
+            android:text="REGISTRARSE" />
 
         <Space
             android:layout_width="match_parent"
