--- a/Medical-History-master/app/src/main/res/layout/nav_header_main.xml
+++ b/Medical-History-master/app/src/main/res/layout/nav_header_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="#BCCCA5"
+    android:background="#DC2F6A"
     android:gravity="bottom|center"
     android:orientation="horizontal"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -14,11 +14,11 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="128dp"
-        android:layout_height="128dp"
+        android:layout_width="255dp"
+        android:layout_height="256dp"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="0dp"
-        app:srcCompat="@drawable/sunflower" />
+        app:srcCompat="@drawable/logo3" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="User"
+            android:text="Usuario"
             tools:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
         <TextView
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="TEST" />
+            android:text="clinGot" />
     </LinearLayout>
 
 </LinearLayout>
