--- a/Medical-History-master/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Medical-History-master/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,7 +10,7 @@
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_medications"
-            android:icon="@drawable/ic_do_not_disturb_black_24dp"
+            android:icon="@drawable/logo3"
             android:title="@string/menu_medications" />
         <item
             android:id="@+id/nav_logout"
