--- a/Medical-History-master/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Medical-History-master/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/addFragment"
         android:name="com.example.practice.ui.home.Add"
-        android:label="Record stats"
+        android:label="Modificar Historial Clinico"
         tools:layout="@layout/add_layout" >
         <action
             android:id="@+id/addFragment_to_homeFragment"
@@ -21,7 +21,7 @@
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.practice.ui.home.HomeFragment"
-        android:label="Daily Stats"
+        android:label="historiales Clinicos"
         tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/homeFragment_to_addFragment"
@@ -34,7 +34,7 @@
     <fragment
         android:id="@+id/editFragment"
         android:name="com.example.practice.ui.home.Edit"
-        android:label="Change or delete these stats"
+        android:label="Cambiar o borrar los historiales Clinicos"
         tools:layout="@layout/edit_layout" >
         <action
             android:id="@+id/editFragment_to_homeFragment"
