--- a/Medical-History-master/app/src/main/res/values/themes.xml
+++ b/Medical-History-master/app/src/main/res/values/themes.xml
@@ -2,12 +2,12 @@
     <!-- Base application theme. -->
     <style name="Theme.Practice" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#918245</item>
-        <item name="colorPrimaryVariant">#FF9800</item>
+        <item name="colorPrimary">#24A601</item>
+        <item name="colorPrimaryVariant">#AE1B4E</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">#918245</item>
-        <item name="colorSecondaryVariant">#FF9800</item>
+        <item name="colorSecondary">#24A601</item>
+        <item name="colorSecondaryVariant">#AE1B4E</item>
         <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
